# book-rust-web-development

book-project/: Cargo.toml
book-project/errors/: Cargo.toml
book-project/errors/src/: lib.rs
book-project/migrations/: 20231119204311_answers_table.up.sql
book-project/qa_web_app/: .gitignore  Cargo.toml
book-project/qa_web_app/src/: main.rs
book-project/qa_web_app/src/domain/: answer.rs  question.rs
book-project/qa_web_app/src/infrastructure/: mod.rs  pagination.rs  response.rs  store.rs
book-project/qa_web_app/src/infrastructure/router/: answer.rs  question.rs
book-project/src/: main.rs
book-project/src/domain/: answer.rs  question.rs
book-project/src/infrastructure/: mod.rs  pagination.rs  store.rs
book-project/src/infrastructure/router/: answer.rs  question.rs
ch_01/: notes.md
ch_01/minimal_reqwest/: Cargo.toml
ch_01/minimal_tcp/: Cargo.toml
ch_01/minimal_tcp/src/: main.rs
ch_01/minimal_warp/: Cargo.toml
ch_01/minimal_warp/src/: main.rs
ch_02/: notes.md
ch_02/book-with-option-poc/: Cargo.toml
ch_02/book-with-option-poc/src/: main.rs
ch_02/faq-rest-api/: Cargo.toml
ch_02/faq-rest-api/src/: main.rs
ch_03/: notes.md
ch_03/qa-web-app/: Cargo.toml
ch_03/qa-web-app/src/: main.rs
ch_04/: notes.md
ch_04/book-project/src/: main.rs
ch_05/: notes.md
ch_05/book-project/errors/: Cargo.toml
ch_06/: notes.md
ch_06/book-project/qa_web_app/: Cargo.toml
ch_06/book-project/qa_web_app/src/infrastructure/router/: answer.rs
ch_07/: notes.md
ch_07/book-project/: Cargo.toml
ch_07/book-project/errors/: Cargo.toml
ch_07/book-project/qa_web_app/: Cargo.toml
ch_08/: notes.md
(+7 files in other folders)
